<resources>
    <string name="app_name">Court Counter</string>
    <string name="textLeftTeam">Team A</string>
    <string name="textRightTeam">Team B</string>
    <string name="pointsLeft">0</string>
    <string name="pointsRight">0</string>
    <string name="pointsButton1">Touchdown</string>
    <string name="pointsButton2">Field Goal</string>
    <string name="pointsButton3">Safety</string>
    <string name="resetButton">Reset</string>
    <string name="foulButton">Fouls</string>
    <string name="foulsLeft">0</string>
    <string name="foulsRight">0</string>
    <string name="blank"> </string>

</resources>