<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="#2599c4"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2599c4"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:id="@+id/left_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/textLeftTeam"
                android:textColor="#0f162b"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/pointsLeftSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pointsLeft"
                android:textSize="100sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="pointsLeftButton1"
                android:text="@string/pointsButton1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="pointsLeftButton2"
                android:text="@string/pointsButton2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="pointsLeftButton3"
                android:text="@string/pointsButton3" />

            <TextView
                android:id="@+id/foulsLeftSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/foulsLeft"
                android:textSize="100sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="foulsLeft"
                android:text="@string/foulButton" />


        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_width="1dp"
            android:layout_height="550dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="44dp"
            android:layout_toEndOf="@id/left_side"
            android:layout_toRightOf="@id/left_side"
            android:background="#0f162b"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/right_side"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_toEndOf="@id/line"
            android:layout_toRightOf="@id/line"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/textRightTeam"
                android:textColor="#0f162b"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/pointsRightSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pointsRight"
                android:textSize="100sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="pointsRightButton1"
                android:text="@string/pointsButton1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="pointsRightButton2"
                android:text="@string/pointsButton2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="pointsRightButton3"
                android:text="@string/pointsButton3" />

            <TextView
                android:id="@+id/foulsRightSide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/foulsRight"
                android:textSize="100sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="#db7a2b"
                android:onClick="foulsRight"
                android:text="@string/foulButton" />

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/left_side"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:background="#c6510d"
            android:onClick="resetButton"
            android:text="@string/resetButton" />


    </RelativeLayout>
</ScrollView>